--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Haoyang Wu"
   pronouns         : # example: "she/her"  
-  bio              : "BSE in Computer Science, University of Michigan '27. BE in Mechanical Engineering, Shanghai Jiao Tong University '27."
+  bio              : "Dual degree student in CS@UM and ME@SJTU."
   location         : "Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
