--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,12 @@ author:
   researchgate     : # URL
 
   # Repositories and software development
-  github           : "academicpages"
+  github           : "https://github.com/William-HYWu"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -57,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : Haoyang Wu
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -65,7 +64,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : #
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
