--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ author:
   researchgate     : # URL
 
   # Repositories and software development
-  github           : "https://github.com/William-HYWu"
+  github           : "William-HYWu"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/haoyang-wu-67050235a/
+  linkedin         : in/haoyang-wu-67050235a/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
