--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : in/haoyang-wu-67050235a/
+  linkedin         : haoyang-wu-67050235a/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
