--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "William-HYWu/https://william-hywu.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Haoyang Wu"
+  name             : "Haoyang Wu (吴浩洋)"
   pronouns         : # example: "she/her"  
   bio              : "Dual degree student in CS@UM and ME@SJTU."
   location         : "Ann Arbor, MI"
